Los campos de texto y mensajes de error relacionados con el apodo de una cuenta es denominada 'Alias'